Overflow fix

--- a/wheelgood/src/components/Map/Map.scss
+++ b/wheelgood/src/components/Map/Map.scss
@@ -28,6 +28,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .googleMap {
